// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpaceMembers if currentUser can not share other shares are listed, but creating/editing shares is not possible 1`] = `
<div id="oc-files-sharing-sidebar" class="oc-position-relative">
  <div class="oc-flex oc-flex-between oc-flex-center oc-flex-middle">
    <div class="oc-flex oc-py-s">
      <h3 class="oc-text-bold oc-text-medium oc-m-rm" data-msgid="Members" data-current-language="en_US">Members</h3>
      <!---->
    </div>
    <div class="oc-flex">
      <oc-button-stub type="button" size="medium" arialabel="Filter members" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
        <oc-icon-stub name="search" filltype="line" accessiblelabel="" type="span" size="small" variation="passive" color=""></oc-icon-stub>
      </oc-button-stub>
    </div>
  </div>
  <!---->
  <ul id="files-collaborators-list" aria-label="Space members" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm">
    <li>
      <collaborator-list-item-stub share="[object Object]"></collaborator-list-item-stub>
    </li>
  </ul>
</div>
`;

exports[`SpaceMembers if currentUser can share initially renders add people dialog 1`] = `
<div id="oc-files-sharing-sidebar" class="oc-position-relative">
  <div class="oc-flex oc-flex-between oc-flex-center oc-flex-middle">
    <div class="oc-flex oc-py-s">
      <h3 class="oc-text-bold oc-text-medium oc-m-rm" data-msgid="Members" data-current-language="en_US">Members</h3>
      <!---->
    </div>
    <div class="oc-flex">
      <oc-button-stub type="button" size="medium" arialabel="Filter members" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
        <oc-icon-stub name="search" filltype="line" accessiblelabel="" type="span" size="small" variation="passive" color=""></oc-icon-stub>
      </oc-button-stub>
    </div>
  </div>
  <invite-collaborator-form-stub savebuttonlabel="Add" invitelabel="Add members" class="oc-my-s"></invite-collaborator-form-stub>
  <ul id="files-collaborators-list" aria-label="Space members" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm">
    <li>
      <collaborator-list-item-stub share="[object Object]"></collaborator-list-item-stub>
    </li>
  </ul>
</div>
`;

exports[`SpaceMembers if currentUser is manager allows role edit of the current user if another user is manager 1`] = `
<div id="oc-files-sharing-sidebar" class="oc-position-relative">
  <div class="oc-flex oc-flex-between oc-flex-center oc-flex-middle">
    <div class="oc-flex oc-py-s">
      <h3 class="oc-text-bold oc-text-medium oc-m-rm" data-msgid="Members" data-current-language="en_US">Members</h3>
      <!---->
    </div>
    <div class="oc-flex">
      <oc-button-stub type="button" size="medium" arialabel="Filter members" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
        <oc-icon-stub name="search" filltype="line" accessiblelabel="" type="span" size="small" variation="passive" color=""></oc-icon-stub>
      </oc-button-stub>
    </div>
  </div>
  <invite-collaborator-form-stub savebuttonlabel="Add" invitelabel="Add members" class="oc-my-s"></invite-collaborator-form-stub>
  <ul id="files-collaborators-list" aria-label="Space members" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm">
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true"></collaborator-list-item-stub>
    </li>
  </ul>
</div>
`;

exports[`SpaceMembers if currentUser is manager does not allow role edit of the current user if they are the only manager 1`] = `
<div id="oc-files-sharing-sidebar" class="oc-position-relative">
  <div class="oc-flex oc-flex-between oc-flex-center oc-flex-middle">
    <div class="oc-flex oc-py-s">
      <h3 class="oc-text-bold oc-text-medium oc-m-rm" data-msgid="Members" data-current-language="en_US">Members</h3>
      <!---->
    </div>
    <div class="oc-flex">
      <oc-button-stub type="button" size="medium" arialabel="Filter members" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
        <oc-icon-stub name="search" filltype="line" accessiblelabel="" type="span" size="small" variation="passive" color=""></oc-icon-stub>
      </oc-button-stub>
    </div>
  </div>
  <invite-collaborator-form-stub savebuttonlabel="Add" invitelabel="Add members" class="oc-my-s"></invite-collaborator-form-stub>
  <ul id="files-collaborators-list" aria-label="Space members" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm">
    <li>
      <collaborator-list-item-stub share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true"></collaborator-list-item-stub>
    </li>
  </ul>
</div>
`;

exports[`SpaceMembers renders loading spinner while loading 1`] = `
<div id="oc-files-sharing-sidebar" class="oc-position-relative">
  <div class="oc-flex oc-flex-between oc-flex-center oc-flex-middle">
    <div class="oc-flex oc-py-s">
      <h3 class="oc-text-bold oc-text-medium oc-m-rm" data-msgid="Members" data-current-language="en_US">Members</h3>
      <!---->
    </div>
    <div class="oc-flex">
      <oc-button-stub type="button" size="medium" arialabel="Filter members" submit="button" variation="passive" appearance="raw" justifycontent="center" gapsize="medium">
        <oc-icon-stub name="search" filltype="line" accessiblelabel="" type="span" size="small" variation="passive" color=""></oc-icon-stub>
      </oc-button-stub>
    </div>
  </div>
  <!---->
  <!---->
</div>
`;
